Clear drug details on new searches

--- a/index.html
+++ b/index.html
@@ -35,15 +35,8 @@
     <body>
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title a11y_hidden">h1.title</h1>
+                <h1 class="title a11y_hidden">OpenFDA Drug Search Prototype</h1>
                 <img src="./img/l_openFDA.png" class="header_logo" alt="OpenFDA Logo" />
-                <!--nav>
-                    <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                    </ul>
-                </nav-->
             </header>
         </div>
         <div class="main-container">
