--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>OpenFDA Drug Search by Technik</title>
+        <title>openFDA Drug Search by Technik</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="shortcut icon" href="./favicon.ico">
@@ -35,8 +35,8 @@
     <body>
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title a11y_hidden">OpenFDA Drug Search Prototype</h1>
-                <img src="./img/l_openFDA.png" class="header_logo" alt="OpenFDA Logo" />
+                <img src="./img/l_openFDA.png" class="header_logo" alt="openFDA Logo" />
+                <h1>Drug Facts Explorer</h1>
             </header>
         </div>
         <div class="main-container">
@@ -82,7 +82,7 @@
                     12950 Worldgate Drive, Suite 230, Herndon, VA 20170
                 </p>
                 <p>
-                    Data from <a href="https://open.fda.gov" target="_blank">OpenFDA</a>
+                    Data from <a href="https://open.fda.gov" target="_blank">openFDA</a>
                 </p>
             </footer>
         </div>
